<resources>
    <string name="app_name">LaoTzu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="two">Verses 1&#8211;9</string>
    <string name="three">Verses 10&#8211;18</string>
    <string name="four">Verses 19&#8211;27</string>
    <string name="five">Verses 28&#8211;37</string>
    <string name="six">Verses 38&#8211;45</string>
    <string name="seven">Verses 46&#8211;54</string>
    <string name="eight">Verses 55&#8211;63</string>
    <string name="nine">Verses 64&#8211;72</string>
    <string name="ten">Verses 73&#8211;81</string>
    <string name="headphones">headphones</string>
    <string name="picturename">tao</string>
    <string name="a"><b>1</b> 道可道，非常道。名可名，非常名。无名天地之始。有名万物之母。故常无欲以观其妙。常有欲以观其徼。此两者同出而异名，同谓之玄。玄之又玄，众妙之门。\n\nThe Tao that can be trodden is not the enduring and\nunchanging Tao. The name that can be named is not the enduring and\nunchanging name.\n\n(Conceived of as) having no name, it is the Originator of heaven\nand earth; (conceived of as) having a name, it is the Mother of all\nthings.\n\nAlways without desire we must be found,\nIf its deep mystery we would sound;\nBut if desire always within us be,\nIts outer fringe is all that we shall see.\n\nUnder these two aspects, it is really the same; but as development\ntakes place, it receives the different names. Together we call them\nthe Mystery. Where the Mystery is the deepest is the gate of all that\nis subtle and wonderful.</string>
    <string name="b"><b>2</b> 天下皆知美之为美，斯恶矣；皆知善之为善，斯不善已。故有无相生，难易相成，长短相形，高下相倾，音声相和，前後相随。是以圣人处无为之事，行不言之教。万物作焉而不辞。生而不有，为而不恃，功成而弗居。夫唯弗居，是以不去。\n\nAll in the world know the beauty of the beautiful, and in doing\nthis they have (the idea of) what ugliness is; they all know the skill\nof the skilful, and in doing this they have (the idea of) what the\nwant of skill is.\n\nSo it is that existence and non&#8211;existence give birth the one to\n(the idea of) the other; that difficulty and ease produce the one (the\nidea of) the other; that length and shortness fashion out the one the\nfigure of the other; that (the ideas of) height and lowness arise from\nthe contrast of the one with the other; that the musical notes and\ntones become harmonious through the relation of one with another; and\nthat being before and behind give the idea of one following another.\n\nTherefore the sage manages affairs without doing anything, and\nconveys his instructions without the use of speech.\n\nAll things spring up, and there is not one which declines to show\nitself; they grow, and there is no claim made for their ownership;\nthey go through their processes, and there is no expectation (of a\nreward for the results). The work is accomplished, and there is no\nresting in it (as an achievement).\n\nThe work is done, but how no one can see;\n\'Tis this that makes the power not cease to be.</string>
    <string name="c"><b>3</b> 不尚贤， 使民不争。不贵难得之货，使民不为盗。不见可欲，使民心不乱。是以圣人之治，虚其心，实其腹，弱其志，强其骨；常使民无知、无欲，使夫智者不敢为也。为无为，则无不治。\n\nNot to value and employ men of superior ability is the way to\nkeep the people from rivalry among themselves; not to prize articles\nwhich are difficult to procure is the way to keep them from becoming\nthieves; not to show them what is likely to excite their desires is\nthe way to keep their minds from disorder.\n\nTherefore the sage, in the exercise of his government, empties\ntheir minds, fills their bellies, weakens their wills, and strengthens\ntheir bones.\n\nHe constantly (tries to) keep them without knowledge and without\ndesire, and where there are those who have knowledge, to keep them\nfrom presuming to act (on it). When there is this abstinence from\naction, good order is universal.</string>
    <string name="d"><b>4</b> 道冲而用之，或不盈。渊兮似万物之宗。解其纷，和其光，同其尘，湛兮似或存。吾不知谁之子，象帝之先。\n\nThe Tao is (like) the emptiness of a vessel; and in our\nemployment of it we must be on our guard against all fulness. How\ndeep and unfathomable it is, as if it were the Honoured Ancestor of\nall things!\n\nWe should blunt our sharp points, and unravel the complications of\nthings; we should attemper our brightness, and bring ourselves into\nagreement with the obscurity of others. How pure and still the Tao\nis, as if it would ever so continue!\n\nI do not know whose son it is. It might appear to have been before\nGod.</string>
    <string name="e"><b>5</b> 天地不仁，以万物为刍狗。圣人不仁，以百姓为刍狗。天地之间，其犹橐迭乎？虚而不屈，动而愈出。多言数穷，不如守中。\n\nHeaven and earth do not act from (the impulse of) any wish to be\nbenevolent; they deal with all things as the dogs of grass are dealt\nwith. The sages do not act from (any wish to be) benevolent; they\ndeal with the people as the dogs of grass are dealt with.\n\nMay not the space between heaven and earth be compared to a\nbellows?\n\n\'Tis emptied, yet it loses not its power;\n\'Tis moved again, and sends forth air the more.\nMuch speech to swift exhaustion lead we see;\nYour inner being guard, and keep it free.</string>
    <string name="f"><b>6</b> 谷神不死是谓玄牝。玄牝之门是谓天地根。绵绵若存，用之不勤。\n\nThe valley spirit dies not, aye the same;\nThe female mystery thus do we name.\nIts gate, from which at first they issued forth,\nIs called the root from which grew heaven and earth.\nLong and unbroken does its power remain,\nUsed gently, and without the touch of pain.</string>
    <string name="g"><b>7</b> 天长地久。天地所以能长且久者，以其不自生，故能长生。是以圣人後其身而身先，外其身而身存。非以其无私邪！故能成其私。\n\nHeaven is long&#8211;enduring and earth continues long. The reason\nwhy heaven and earth are able to endure and continue thus long is\nbecause they do not live of, or for, themselves. This is how they are\nable to continue and endure.\n\nTherefore the sage puts his own person last, and yet it is found in\nthe foremost place; he treats his person as if it were foreign to him,\nand yet that person is preserved. Is it not because he has no\npersonal and private ends, that therefore such ends are realised?</string>
    <string name="h"><b>8</b> 上善若水。水善利万物而不争，处众人之所恶，故几於道。居善地，心善渊与善仁，言善信，正善治，事善能，动善时。夫唯不争，故无尤。\n\nThe highest excellence is like (that of) water. The excellence\nof water appears in its benefiting all things, and in its occupying,\nwithout striving (to the contrary), the low place which all men\ndislike. Hence (its way) is near to (that of) the Tao.\n\nThe excellence of a residence is in (the suitability of) the place;\nthat of the mind is in abysmal stillness; that of associations is in\ntheir being with the virtuous; that of government is in its securing\ngood order; that of (the conduct of) affairs is in its ability; and\nthat of (the initiation of) any movement is in its timeliness.\n\nAnd when (one with the highest excellence) does not wrangle (about\nhis low position), no one finds fault with him.</string>
    <string name="i"><b>9</b> 持而盈之不如其己；揣而锐之不可长保；金玉满堂莫之能守；富贵而骄，自遗其咎。功遂身退，天之道。\n\nIt is better to leave a vessel unfilled, than to attempt to\ncarry it when it is full. If you keep feeling a point that has been\nsharpened, the point cannot long preserve its sharpness.\n\nWhen gold and jade fill the hall, their possessor cannot keep them\nsafe. When wealth and honours lead to arrogancy, this brings its evil\non itself. When the work is done, and one\'s name is becoming\ndistinguished, to withdraw into obscurity is the way of Heaven.</string>
    <string name="j"><b>10</b> 载营魄抱一，能无离乎？专气致柔，能如婴儿乎？涤除玄览，能无疵乎？爱国治民，能无为乎？天门开阖，能为雌乎？明白四达，能无知乎。\n\nWhen the intelligent and animal souls are held together in one\nembrace, they can be kept from separating. When one gives undivided\nattention to the (vital) breath, and brings it to the utmost degree of\npliancy, he can become as a (tender) babe. When he has cleansed away\nthe most mysterious sights (of his imagination), he can become without\na flaw.\n\nIn loving the people and ruling the state, cannot he proceed\nwithout any (purpose of) action? In the opening and shutting of his\ngates of heaven, cannot he do so as a female bird? While his\nintelligence reaches in every direction, cannot he (appear to) be\nwithout knowledge?\n\n(The Tao) produces (all things) and nourishes them; it produces\nthem and does not claim them as its own; it does all, and yet does not\nboast of it; it presides over all, and yet does not control them.\nThis is what is called \'The mysterious Quality\' (of the Tao).</string>
    <string name="k"><b>11</b> 三十幅共一毂，当其无，有车之用。埏埴以为器，当其无，有器之用。凿户牖以为室，当其无，有室之用。故有之以为利，无之以为用。\n\nThe thirty spokes unite in the one nave; but it is on the empty\nspace (for the axle), that the use of the wheel depends. Clay is\nfashioned into vessels; but it is on their empty hollowness, that\ntheir use depends. The door and windows are cut out (from the walls)\nto form an apartment; but it is on the empty space (within), that its\nuse depends. Therefore, what has a (positive) existence serves for\nprofitable adaptation, and what has not that for (actual) usefulness.</string>
    <string name="l"><b>12</b> 五色令人目盲，五音令人耳聋，五味令人口爽，驰骋畋猎令人心发狂，难得之货令人行妨。是以圣人，为腹不为目，故去彼取此。\n\nColour\'s five hues from th\' eyes their sight will take;\nMusic\'s five notes the ears as deaf can make;\nThe flavours five deprive the mouth of taste;\nThe chariot course, and the wild hunting waste\nMake mad the mind; and objects rare and strange,\nSought for, men\'s conduct will to evil change.\n\nTherefore the sage seeks to satisfy (the craving of) the belly, and\nnot the (insatiable longing of the) eyes. He puts from him the\nlatter, and prefers to seek the former.</string>
    <string name="m"><b>13</b> 宠辱若惊，贵大患若身。何谓宠辱若惊？宠为下。得之若惊失之若惊是谓宠辱若惊。何谓贵大患若身？吾所以有大患者，为吾有身，及吾无身，吾有何患。故贵以身为天下，若可寄天下。爱以身为天下，若可托天下。\n\nFavour and disgrace would seem equally to be feared; honour and\ngreat calamity, to be regarded as personal conditions (of the same\nkind).\n\nWhat is meant by speaking thus of favour and disgrace? Disgrace is\nbeing in a low position (after the enjoyment of favour). The getting\nthat (favour) leads to the apprehension (of losing it), and the losing\nit leads to the fear of (still greater calamity):&#8212;this is what is\nmeant by saying that favour and disgrace would seem equally to be\nfeared.\n\nAnd what is meant by saying that honour and great calamity are to be\n(similarly) regarded as personal conditions? What makes me liable to\ngreat calamity is my having the body (which I call myself); if I had\nnot the body, what great calamity could come to me?\n\nTherefore he who would administer the kingdom, honouring it as he\nhonours his own person, may be employed to govern it, and he who would\nadminister it with the love which he bears to his own person may be\nentrusted with it.</string>
    <string name="n"><b>14</b> 视之不见名曰夷。听之不闻名曰希。抟之不得名曰微。此三者不可致诘，故混而为一。其上不??，其下不昧，绳绳不可名，复归於无物。是谓无状之状，无物之象，是谓惚恍。迎之不见其首，随之不见其後。执古之道以御今之有。能知古始，是谓道纪。\n\nWe look at it, and we do not see it, and we name it \'the\nEquable.\' We listen to it, and we do not hear it, and we name it \'the\nInaudible.\' We try to grasp it, and do not get hold of it, and we\nname it \'the Subtle.\' With these three qualities, it cannot be made\nthe subject of description; and hence we blend them together and\nobtain The One.\n\nIts upper part is not bright, and its lower part is not obscure.\nCeaseless in its action, it yet cannot be named, and then it again\nreturns and becomes nothing. This is called the Form of the Formless,\nand the Semblance of the Invisible; this is called the Fleeting and\nIndeterminable.\n\nWe meet it and do not see its Front; we follow it, and do not see\nits Back. When we can lay hold of the Tao of old to direct the things\nof the present day, and are able to know it as it was of old in the\nbeginning, this is called (unwinding) the clue of Tao.</string>
</resources>